--- a/web/css/styled.css
+++ b/web/css/styled.css
@@ -638,6 +638,17 @@ tr.ltblue {
   background-position: 50% 50%;
 }
 
+span.infobox { /* mdb created 9/20/12 */
+	background-color: #edffed;
+	border-style:solid;
+	border-width:1px;
+	border-color:lightgray;
+	padding-top:2px;
+	padding-bottom:2px;
+	padding-left:5px;
+	padding-right:5px;
+}
+
 th.header {
  /*background-image: url(/CoGe/picts/blast_table/small.gif);*/
  background-color: #edffed;
@@ -649,6 +660,20 @@ th.header {
  padding-right: 12px;
  border-right: 1px solid #dad9c7;
  border-bottom: 2px solid #dad9c7;
+ margin-left: -1px;
+ cursor: pointer;
+}
+
+tfoot {
+ background-color: #edffed;
+ font-weight: bold;
+ font-size: 12;
+ background-repeat: no-repeat;
+ background-position: center left;
+ padding-left: 20px;
+ padding-right: 12px;
+ border-right: 1px solid #dad9c7;
+ border-top: 2px solid #dad9c7;
  margin-left: -1px;
  cursor: pointer;
 }
