--- a/web/tmpl/Lists.tmpl
+++ b/web/tmpl/Lists.tmpl
@@ -10,12 +10,30 @@ $(document).ready(function(){
 		dataType: "html",
 		cache: false,
 	});
+	
 	set_table();
+	
 	$(".dialog_box").dialog({autoOpen: 0, width: 600});
-	<TMPL_VAR ADDITIONAL_STUFF>
 });
 
-function set_table () {	 $('#list_table').tablesorter({widgets: ['zebra']});	 }
+function set_table () { 
+	$('#list_table').tablesorter({widgets: ['zebra']});	
+}
+
+function input_focus(div_id) {
+	$('#'+div_id).val("").css({fontStyle: "normal"});
+}
+
+//Filters Rows for search_text - Case sensitive as of now, and searches hidden columns...
+function filter_rows (search_text){
+	if(!search_text) { $("#list_table_body tr:hidden").show(0);}
+	else if (search_text.length >= 3) {
+		$("#list_table_body tr:hidden").show(0);
+		if( $('#search_type').val() == 1 ) { $("#list_table_body tr:not(:contains('"+search_text+"'))").hide(); }
+		else { $("#list_table_body tr:contains('"+search_text+"')").hide(); }
+	}
+	$('#filter_count').html('Showing ' + $("#list_table_body tr:visible").length + ' of ' + $("#list_table_body tr").length + ' lists');
+}
 
 function run_get_lists_for_user(opts){
 	if (!opts) { opts={}; }
@@ -86,26 +104,9 @@ function dialog_delete_list (opts) {
 }
 </SCRIPT>
 
-<div id=lists><TMPL_VAR NAME=LIST_INFO></div>
-<div>
-<TABLE>
-<tr>
- <td>List Name:</td>
- <td><input type="textbox" size=8 name="name" id="name"></td>
- <td>Description:</td>
- <td><input type="textbox" size=16 name="desc" id="desc"></td>
- <td>Type:</td>
- <td><select id="type">
-  <TMPL_LOOP NAME=TYPE_LOOP>
-   <OPTION value=<TMPL_VAR NAME=TID>><TMPL_VAR NAME=NAME></OPTION>
-  </TMPL_LOOP>
-  </select>
- </td>
- <td><span id=create_list style="font-size: .75em" class='ui-button ui-button-go ui-corner-all' onClick="create_list()">Create new list</span></td>
-</table>
-</div>
+<div id="lists"><TMPL_VAR NAME=LIST_INFO></div>
 
-<div id=edit_box class= "dialog_box"></div>
+<div id="edit_box" class="dialog_box"></div>
 
 <div id="list_delete_box" class="dialog_box" style='display:none;' align='center'>
 Are you sure you want to permanently delete this list?<p>
@@ -116,10 +117,28 @@ Are you sure you want to permanently delete this list?<p>
  </div>
 </div>
 
-<div id=admin_stuff></div>
-</TMPL_IF>
+<div id="admin_stuff"></div>
+</TMPL_IF> <!-- MAIN -->
 
 <TMPL_IF LIST_STUFF>
+<SCRIPT language="JavaScript">
+$(document).ready(function(){
+	$("#search_bar").keyup( function() { filter_rows( $(this).val() ); });
+	$('#search_type').mouseup( function() { filter_rows( $('#search_bar').val() ); });
+	filter_rows();
+});
+</SCRIPT>
+
+<div class='small' style="padding-top:5px;padding-bottom:5px;">
+ Filter: 
+ <input type="text" id="search_bar">
+ <select id="search_type">
+  <option value="1">Contains</option>
+  <option value="0">Does NOT contain</option>
+ </select>
+ <span id='filter_count' style="margin-left:20px;"></span>
+</div>
+
 <table id="list_table" class="small ui-widget-content ui-corner-all">
  <thead align="left"> 
   <tr>
@@ -129,10 +148,29 @@ Are you sure you want to permanently delete this list?<p>
    <th>Contents</th>
    <th>Annotations</th>
    <th>User Group</th>
+   <th>Restricted</th>
    <th>Edit</th>
    <th>Delete</th>
   </tr>
  </thead>
+ <tfoot>
+  <tr>
+   <td id='create_list_hidden' colspan='9' height='26'>
+    <span style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="$('#create_list_hidden').hide(); $('#create_list_shown').fadeIn('fast');">Create new list</span>
+   </td>
+  </tr>
+  <tr id='create_list_shown' style="display:none;">
+   <td><input type="textbox" size="8" name="name" id="name" value='Name' style="font-style:italic;color:gray;" onFocus="input_focus('name')"></td>
+   <td><input type="textbox" size="32" name="desc" id="desc" value='Description' style="font-style:italic;color:gray;" onFocus="input_focus('desc')"></td>
+   <td><select id="type">
+    <TMPL_LOOP NAME=TYPE_LOOP>
+     <OPTION value=<TMPL_VAR NAME=TID>><TMPL_VAR NAME=NAME></OPTION>
+    </TMPL_LOOP>
+    </select>
+   </td>
+   <td colspan='10'><span style="font-size: 1em" class='ui-button ui-button-go ui-corner-all' onClick="create_list()">Add</span></td>
+  </tr>
+ </tfoot>
  <tbody align="left" valign="top" id="list_table_body" class="small">
   <TMPL_LOOP NAME=LIST_LOOP>
   <tr valign="middle">
@@ -142,18 +180,16 @@ Are you sure you want to permanently delete this list?<p>
    <td><TMPL_VAR NAME=DATA></td>
    <td><TMPL_VAR NAME=ANNO></td>
    <td><TMPL_VAR NAME=GROUP></td>
+   <td align='center'><TMPL_VAR NAME=RESTRICTED></td>
    <td align='center'><TMPL_VAR NAME=EDIT_BUTTON></td>
    <td align='center'><TMPL_VAR NAME=DELETE_BUTTON></td>
+  </tr>
   </TMPL_LOOP>
  </tbody>
-</TABLE>
-</TMPL_IF>
+</table>
+</TMPL_IF> <!-- LIST_STUFF -->
 
 <TMPL_IF NAME=ADMIN_AREA>
 <hr>
 Admin Functions:<br>
-<pre>
-To do:
-   - add confirmation dialog to delete list function.
-</pre>
-</TMPL_IF>
+</TMPL_IF> <!-- ADMIN_AREA -->
